example-apps/nginx/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: example-nginx
spec:
  template:
    metadata:
      labels:
        app: example-nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
          name: http
