example-apps/nginx/service.yml
apiVersion: v1
kind: Service
metadata:
  name: example-nginx
spec:
  ports:
  - port: 80
    name: http
    targetPort: 80
  selector:
    app: example-nginx
