example-apps/nginx/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: nginx-example.apps.cluster1.kops.integration.dsd.io
    http:
      paths:
      - path: /
        backend:
          serviceName: example-nginx
          servicePort: 80
